--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,18 +7,18 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
-    overflow: hidden;
+    overflow: hidden; 
 
     &:hover {
       curser: pointer;
 
       & .background-image {
         transform: scale(1.1);
-        transition: transform 6s cubic-bezier(.25, .45, .45, .95);
+        transition: transform 3s cubic-bezier(.25, .45, .45, .95);
       }
 
       & .content {
-        opacity: 0.9;
+        opacity: .9;
       }
     }
 
